# blog

./: config.yml
.github/actions/: gh-pages.yml
.github/workflows/: deploy.yml  hugo.yml
assets/css/extended/: cascadia.css
content/: about.md  search.md
content/pages/: about.md
content/posts/: backups.md  dvorak.md  google-bell.md  lights.md  openwireless.md  ssh-ca.md
generator/: Cargo.toml  flake.nix  result
generator/src/: config.rs  main.rs  page.rs  post.rs  template.rs
generator/templates/: base.html  font_script.html  index.html  nav.html  page.html  post.html  post_item.html  styles.html
layouts/partials/: extend_head.html
