[package]
name = "nicolaschan-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
pulldown-cmark = "0.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
syntect = "5.1"
once_cell = "1.18"
